# remote-controller

client/: Cargo.toml  mobile.toml
client/src/: app.rs  bin.rs  lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
