[package]
name = "remote-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
egui-miniquad = "0.12.0"
miniquad = "0.3.13"
reqwest = { version = "0.11.12", default-features = false, features = [ "blocking", "rustls" ] }
ron = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"
