[package]
name = "remote-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]
name = "remote_controller"

[[bin]]
name = "remote_controller_desktop"
path = "src/bin.rs"

[dependencies]
reqwest = { version = "0.11.12", default-features = false, features = [ "blocking", "rustls" ] }
ron = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
winit = "0.27"
egui = "0.19"
egui-wgpu = { version = "0.19", features = ["winit"] }
pollster = "0.2.5"
egui-winit = "0.19.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"
ndk = "0.7.0"
ndk-context = "0.1.1"
jni = "0.20.0"

[package.metadata.android.application]
debuggable = true

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application.activity]
orientation = "portrait"
