[package]
name = "remote-receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wakey = "0.2.2"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
clap = { version = "4.0.18", features = ["derive"] }
